--- a/frontend/styles/typography.css
+++ b/frontend/styles/typography.css
@@ -137,6 +137,23 @@
 	color: var(--action-color);
 }
 
+.heading-three, h3 {
+	font-size: 3rem;
+	line-height: 1em;
+	font-family: 'MDPrimer', -apple-system, Helvetica, Arial, sans-serif;
+	font-weight: 600;
+	margin-top: 0em;
+	margin-bottom: 0.5em;
+ }
+.heading-four, h4 {
+	font-size: 2rem;
+	line-height: 1em;
+	font-family: 'MDPrimer', -apple-system, Helvetica, Arial, sans-serif;
+	font-weight: 600;
+	margin-top: 0em;
+	margin-bottom: 0.5em;
+ }
+
 .excerpt {
 	font-family: 'MDSystem', -apple-system, Helvetica, Arial, sans-serif;
 	font-weight: 600;
@@ -203,29 +220,29 @@
 	max-width: 60rem;
 }
 /* Define heading widths: */
-.content h1 { font-size: 5rem; line-height: 1em;}
-.content h2 { font-size: 4rem; line-height: 1em;}
-.content h3 { font-size: 3rem; line-height: 1em;}
-.content h4 { font-size: 2rem; line-height: 1em;}
-.content h1, .content h2, .content h3, .content h4 {
+.content > h1 { font-size: 5rem; line-height: 1em;}
+.content > h2 { font-size: 4rem; line-height: 1em;}
+.content > h3 { font-size: 3rem; line-height: 1em;}
+.content > h4 { font-size: 2rem; line-height: 1em;}
+.content > h1, .content > h2, .content > h3, .content > h4 {
 	margin-top: 2em;
 	margin-bottom: 0.75em;
 }
-.content p {
+.content > p {
 	font-size: 1.5rem;
 	line-height:1.5em;
 	font-weight:600;
 }
-.content p strong { font-weight:600; }
-.content p em {font-style: italic;}
-.content p a {background:black; padding: 0.10rem 0.35rem; text-decoration: none;}
-.content p a:hover {color:black;background:var(--action-color); padding: 0.10rem 0.35rem; text-decoration: none;}
-.content ul {}
-.content ul li {}
-.content blockquote {}
-.content figure {}
-.content figure img {}
-.content figure figcaption {}
+.content > p strong { font-weight:600; }
+.content > p em {font-style: italic;}
+.content > p a {background:black; padding: 0.10rem 0.35rem; text-decoration: none;}
+.content > p a:hover {color:black;background:var(--action-color); padding: 0.10rem 0.35rem; text-decoration: none;}
+.content > ul {}
+.content > ul li {}
+.content > blockquote {}
+.content > figure {}
+.content > figure img {}
+.content > figure figcaption {}
 /* <figure>
 	<img src="pic_trulli.jpg" alt="Trulli" style="width:100%">
 	<figcaption>Fig.1 - Trulli, Puglia, Italy.</figcaption>
@@ -270,21 +287,21 @@
 /* Adjusted font-sizes for mobile stuff. */
 @media (max-width: 600px) {
 	.heading-one, h1 { font-size: 3rem; }
-	.content h1 { font-size: 3rem;   }
-	.content h2 { font-size: 2.5rem; }
-	.content h3 { font-size: 2rem;   }
-	.content h4 { font-size: 1.5rem; }
-	.content p  { font-size: 1rem;}
-	.content p strong { }
-	.content p em {}
-	.content p a {}
-	.content p a:hover {}
-	.content ul {}
-	.content ul li {}
-	.content blockquote {}
-	.content figure {}
-	.content figure img {}
-	.content figure figcaption {}
+	.content > h1 { font-size: 3rem;   }
+	.content > h2 { font-size: 2.5rem; }
+	.content > h3 { font-size: 2rem;   }
+	.content > h4 { font-size: 1.5rem; }
+	.content > p  { font-size: 1rem;}
+	.content > p strong { }
+	.content > p em {}
+	.content > p a {}
+	.content > p a:hover {}
+	.content > ul {}
+	.content > ul li {}
+	.content > blockquote {}
+	.content > figure {}
+	.content > figure img {}
+	.content > figure figcaption {}
 }
 
 .button-link {
